# cloakvpn

./: .gitignore  HANDOFF.md  HANDOFF_2026-04-27_session2.md  HANDOFF_2026-04-27_session3.md  HANDOFF_2026-04-27_session4.md  README.md  SECURITY.md  SESSION_HANDOVER_2026-05-23_pqc-rotation.md  SESSION_HANDOVER_2026-05-24_phase4-billing.md  SESSION_HANDOVER_2026-05-25_launch-hardening.md  SESSION_HANDOVER_2026-05-25_multiregion-launch.md  SESSION_HANDOVER_2026-05-26_us-east-1-outage.md  SESSION_HANDOVER_2026-05-29_android-launch-and-ios-unblocked.md  SESSION_HANDOVER_2026-05-29_ios-appstore-submit-and-pqc-reprovision-loop.md  SESSION_HANDOVER_2026-05-29_region-switch-rootcause-and-pqc-grace.md  SESSION_HANDOVER_2026-05-30_pqc-poisoned-state-and-scale.md  SESSION_HANDOVER_2026-06-01_iap-storekit-3.1.1.md  SESSION_HANDOVER_2026-06-03_appstore-3.1.x-and-play-vpn-declaration.md  SESSION_HANDOVER_2026-06-05_appstore-metadata-pricing-url.md  SESSION_HANDOVER_2026-06-05b_appstore-3.1.1-no-external-links.md  SESSION_HANDOVER_2026-06-11_android-LIVE-and-ios-build-109.md  SESSION_HANDOVER_2026-06-15_android-play-billing.md  SESSION_HANDOVER_2026-06-16_android-play-billing-LIVE.md  wrangler.jsonc
.github/workflows/: ci.yml  deploy-website.yml
.icon-source/: make_icons.py  make_lattice_icons.py
clients/android/: .gitignore  PLAY_STORE.md  README.md  gradle.properties  ndk-cmake-toolchain.cmake  privacy-policy.md  secrets.properties.example  settings.gradle.kts
clients/ios/: .gitignore  CloakVPN-Info.plist  README.md
clients/ios/RosenpassFFI/: .gitignore  Cargo.toml  README.md  build-xcframework.sh  build.rs
clients/ios/RosenpassFFI/src/: lib.rs
clients/mac/: README.md  project.yml
docs/: ANDROID_LAUNCH.md  APP_REVIEW_NOTES.md  ARCHITECTURE.md  BILLING_INTEGRATION.md  DEPLOY_API.md  DEPLOY_MULTIREGION.md  FIPS_PQC_VPN_MARKET_RESEARCH.md  GOOGLE_PLAY_BILLING_SETUP.md  HOTFIX_regionsvc-pubkey-placeholder-2026-05-26.md  HOTFIX_rosenpass-restart-2026-05-25.md  IAP_SETUP.md  IOS_PQC.md  MONITORING_AND_OBSERVABILITY_PLAN.md  PRICING.md  ROADMAP.md  ROSENPASS_NO_RESTART_PEER_MGMT.md  STRIPE_SETUP.docx  STRIPE_SETUP.md  TRIAGE_2026-04-27.md
docs/app-store/: metadata.md  resize_screenshots.py  resize_screenshots_ipad.py  screenshot-guide.md  vpn-data-disclosure.md
docs/legal/: .gitignore  build.py  build_compliance_letter.py  build_french_declaration.py  privacy-policy.md  terms-of-service.md
infra/: .gitignore  MIGRATE-fi1.md  Makefile  README.md  deploy.sh
infra/terraform/: main.tf  outputs.tf  variables.tf  (+1 more)
scripts/: deploy_regionsvc_fix_20260529.sh  gen-stripe-docx.js
server/: README.md
website/: README.md  audit.html  build_worldmap_svg.py  canary.html  index.html  pricing.html  privacy.html  terms.html  transparency.html  welcome.html
website-v2/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
(+193 files in other folders)
